--- a/CKAD-Cert/pod/pod.yml
+++ b/CKAD-Cert/pod/pod.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: balaji-pod
+  namespace: stephe
   labels:
      app: my-app
      type: frontend
@@ -9,4 +10,3 @@ spec:
    containers:
      - name: balaji-container
        image: httpd
-       
