--- a/CKAD-CertMK/Services and Networking/Network Policies/network-policy.yaml
+++ b/CKAD-CertMK/Services and Networking/Network Policies/network-policy.yaml
@@ -1,23 +1,21 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: my-first-policy
+  name: polict-to-restrict-access-to-db
 spec:
   podSelector:
     matchLabels:
-         app: my-app
+       purpose: db-pod
   policyTypes:
   - Ingress:
   ingress:
   - from: 
     - podSelector:
-       matchLabels:
-          app: my-backend-pod
+         matchlabels:
+            purpose: backend-pod
       namespaceSelector:
-          matchlabels:
-          
+        matchLables:
+           name: dev 
     ports:
-     - protocol: tcp
-       port: 3306
-
-     
+    - protocol: tcp
+      port: 3306
