--- a/CKAD-KP/Domain 2 - Pod Designs/labels and Selectors/labels2.yaml
+++ b/CKAD-KP/Domain 2 - Pod Designs/labels and Selectors/labels2.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Pod
 metadata:
-   name: balaji-pod
+   name: balaji-pod-1
    labels:
       env: dev
       purpose: chuma
 spec:
   containers:
-  - name: balaji-pod-container
+  - name: balaji-pod-container-1
     image: nginx
     ports:
     - containerPort: 8080
